Fix [General] Align default paths in the jobs for CE (#1582)

--- a/src/components/FeatureSetsPanel/FeatureSetsPanelTargetStore/featureSetsPanelTargetStore.scss
+++ b/src/components/FeatureSetsPanel/FeatureSetsPanelTargetStore/featureSetsPanelTargetStore.scss
@@ -148,10 +148,4 @@
     margin: 10px 0;
     cursor: pointer;
   }
-
-  .annotation {
-    margin-top: 5px;
-    color: $topaz;
-    font-size: 12px;
-  }
 }
